app.css
/* ... */
#rightpanel.closepanel {width:1px;}
#rightpanel.closepanel #rightpaneltitle, #rightpanel.closepanel div.btn-group-justified, #rightpanel.closepanel div.row-fluid.closepanel {display:none;}

div.sidepanel div.panelbar {
    position:absolute;
    height:100%;
}
#leftpanel div#toggleLpanelicon.panelbar {
  left:calc(100% - 16px);
}
#rightpanel div#toggleRpanelicon.panelbar {
  right:calc(100% - 16px);
}

div.sidepanel div.panelbar span {
    display: flex;
    width: 16px;
    height: 100%;
    position:relative;
    justify-content:center;
    align-items:center;
    font-size: .75em;
    color: #ADADAD;
    background: #eee;
}
#main {
    margin-left:270px;
    width:calc(100% - 270px);
    height: calc(100% - 62px - 40px);
    margin-top:62px;
    position: fixed;
    overflow:auto;
}

#canvas {
    width: 100%;
    height:calc(100% - 62px - 40px);
    margin:62px 0 0 0;
    position:fixed;
    overflow:auto;
}

#ticker {
    position:fixed;
    height:40px;
    width:100%;
    background:#F9F9F9;
    bottom:0;
    border-top:1px solid #ADADAD;
    z-index:1000;
}

#spacetools {
    z-index: 17;
}
.spaceTool {
    top:0; 
    right:21%;
    margin-right:10px; 
    margin-top:10px; 
    position:absolute;
}
.spaceTool button:first-child {
    margin-right:1em;
}
.spaceTool button span {
    font-size:1em;
    color:#818181;
    pointer-events:none;
}

#transformations {
    z-index:33;
    height:8%;
    width:14%; 
    right:200px;
    top:14px;
    position:absolute;
}
#transformations ul, #transformations ul li {
    list-style:none;
    margin-left:0;
    padding-left:0;
}
#transformations ul li {
    padding:1px 4px;
    text-align: left;
}
#transSel li:hover { background-color:rgba(250, 128, 114, 0.5); cursor:pointer;}
#transList li:hover { background-color:rgba(250, 128, 114, 0.5); cursor:pointer;}

.legendary {
    width:10%;
    position:absolute;
    bottom:0;
    right:21%;
    margin-right:10px;
    margin-bottom:10px;
}
.legendary .clearfix {
    margin-bottom:4px;
}
.legendary .rectColor {
    float:left;
    width:20px;
    height:20px;
    margin-right:4px;
    /*opacity: 0.5;*/
}
.legendary .rectColor circle {
    opacity: 0.5;
}
.legendary .rectLabel {
    float:left;
}

.logbox {
    width:15%;
    position:absolute;
    bottom:0;
    left:21%;
    margin-left:10px;
    margin-bottom:10px;
}
.logbox .clearfix {
    margin-bottom:4px;
}
.logbox .rectColor {
    float:left;
    width:20px;
    height:20px;
    margin-left:4px;
    opacity: 0.5;
}
.logbox .rectLabel {
    float:left;
}

#sandbox {
    width:500px;
    height:400px;
}

/* p { padding-left: 15px; } */

path { 
    fill: steelblue;
}

.axis path,
.axis line {
  fill: none;
  stroke: #000;
  shape-rendering: crispEdges;
}

.brush .extent {
    stroke: #fff;
    fill-opacity: .125;
    shape-rendering: crispEdges;
}

.handle {
  fill: #fff;
  stroke: #000;
  stroke-opacity: .5;
  stroke-width: 1.25px;
  pointer-events: fill;
}

table, th, td {
    border-collapse: collapse;text-align:right;
}
td {
    padding:4px;
}

/* Carousel */
.carousel-indicators {
    top:20px;
    bottom:auto;
}
.carousel-indicators li {
    border: 1px solid #818181;
}
.carousel-indicators li.active {
    background-color: #818181;
}
.carousel-indicators li#create, .carousel-indicators li#delete {
    border: 0;
    border-radius: 0;
    background-color: inherit;
    text-indent:0;
    font-size:12px;
    width:12px;
    height:12px;
    line-height:12px;
}
.carousel-indicators li#create .glyphicon {
    top:0;
}

.carousel-linked-nav,
.item img {
  display: block; 
  margin: 0 auto;
}

.carousel-linked-nav {
  width:200px;
  margin: 10px auto;   
}
.carousel-linked-nav li {position:relative;}

#carouselLeft {position:absolute;top:50%;left:calc(16px + 20%);z-index:30;font-size:2em;}
#carouselRight {position:absolute;top:50%;right:calc(16px + 20%);z-index:30;font-size:2em;}

.lowerError {
    fill: #4682b4;
}

.upperError {
  fill: silver;
  fill-opacity: 0.65;
}

.line {
  fill: #4682b4;
}

.nofill {
  fill: none;
}



#searchvar{
  background: #fff url(icoX.gif) no-repeat right -10px center;
  border: 1px solid #999;
  padding: 3px 18px 3px 4px;     /* Use the same right padding (18) in jQ! */
  border-radius: 3px;
  transition: background 0.4s;
}
#searchvar.x  { background-position: right 5px center; } /* (jQ) Show icon */
#searchvar.onX{ cursor: pointer; }     

 /* The Overlay (background) */
.overlay {
    /* Height & width depends on how you want to reveal the overlay (see JS below) */   
    height: 100%;
    width: 0;
    position: fixed; /* Stay in place */
    z-index: 51; /* Sit on top */
    left: 0;
    top: 0;
    background-color: rgb(0,0,0); /* Black fallback color */
    background-color: rgba(0,0,0, 1.0); /* Black w/opacity */
    overflow-x: hidden; /* Disable horizontal scroll */
    transition: 0.5s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
}
.overlay h1{
 position: relative;
    top: 10%; /* 25% from the top */
    width: 100%; /* 100% width */
    text-align: center; /* Centered text/links */
    margin-top: 30px;
    margin-bottom: 7%;
  
}
/* Position the content inside the overlay */
.overlay-content {
    position: relative;
    /*top: 10%; /* 25% from the top */
    width: 100%; /* 100% width */
    /*text-align: center;*/ /* Centered text/links */
    margin-top: 30px; /* 30px top margin to avoid conflict with the close button on smaller screens */
    height:90%;
}

/* The navigation links inside the overlay */
.overlay p {
    padding: 8px;
    text-decoration: none;
    font-size: 36px;
    color: #818181;
    /*display: block; /* Display block instead of inline */
    transition: 0.3s; /* Transition effects on hover (color) */
    margin-top: 3%;
}

/* When you mouse over the navigation links, change their color */
.overlay a:hover, .overlay a:focus {
    color: #f1f1f1;
}
/* ... */

